<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardview_task_recycler"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/dimen_15dp"
    android:layout_marginHorizontal="@dimen/dimen_15dp"
    app:cardElevation="@dimen/dimen_10dp"
    app:cardCornerRadius="@dimen/dimen_15dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <CheckBox
            android:id="@+id/checkbox_recycler"
            android:buttonTint="@color/purple_400"
            android:visibility="invisible"
            android:layout_marginLeft="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_task_recycler"
            app:layout_constraintLeft_toRightOf="@id/checkbox_recycler"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_15dp">
            <TextView
                android:id="@+id/title_task_recycler"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:fontFamily="@font/montserrat_semi_bold_italic"
                android:text="@string/generic_title_task_recycler"
                android:textColorHighlight="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_25dp"/>
            <TextView
                android:id="@+id/text_task_recycler"
                app:layout_constraintTop_toBottomOf="@+id/title_task_recycler"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:fontFamily="@font/montserrat_semi_bold_italic"
                android:text="@string/generic_task_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/created_date_task_recycler"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/montserrat_semi_bold_italic"
                android:textSize="@dimen/dimen_10sp"
                android:text="@string/generic_created_date_task_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/state_task_recycler"
                app:layout_constraintTop_toBottomOf="@id/created_date_task_recycler"
                app:layout_constraintRight_toRightOf="parent"
                android:fontFamily="@font/montserrat_semi_bold_italic"
                android:textSize="@dimen/dimen_10sp"
                android:textColor="@color/red"
                android:text="@string/generic_state_task_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>