<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FragmentDialogCreate"
    android:background="@drawable/background_gradient_blue"
    android:id="@+id/fragment_professional_create">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title_fragment_create"
        android:text="@string/text_title_create"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="@dimen/dimen_35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/title_fragment_create"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/linear_main_create"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_textarea_rounded">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/box_edit_main_create_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7.5dp"
            android:foregroundTint="@color/purple_500"
            android:layout_marginHorizontal="@dimen/dimen_35dp"
            android:layout_marginBottom="@dimen/dimen_10dp">
            <EditText
                android:padding="@dimen/dimen_10dp"
                android:id="@+id/edit_main_create_title"
                android:hint="@string/edit_main_create_title_hint"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/box_edit_main_create_title"
            app:layout_constraintBottom_toTopOf="@+id/button_main_create"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:weightSum="1"
            android:layout_marginTop="@dimen/dimen_65dp"
            android:layout_marginHorizontal="@dimen/dimen_35dp"
            android:padding="7.5dp">
            <EditText
                android:padding="@dimen/dimen_10dp"
                android:textSize="@dimen/dimen_15dp"
                android:textIsSelectable="true"
                android:id="@+id/edit_main_create_text"
                android:gravity="top|left"
                android:background="@null"
                android:minLines="8"
                android:maxLines="12"
                android:lines="10"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:hint="@string/edit_main_create_text_hint"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="@dimen/dimen_35dp"
            android:layout_marginHorizontal="@dimen/dimen_50dp"
            android:id="@+id/button_main_create"
            android:text="@string/button_main_create_task"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gradient_blue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>