<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_25dp">
    <TextView
        android:id="@+id/details_title_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black_italic"
        android:text="@string/generic_title_task_recycler"
        android:textSize="@dimen/dimen_20sp"
        android:paddingBottom="@dimen/dimen_35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/details_text_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/generic_task_recycler"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintTop_toBottomOf="@id/details_title_task"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_constraint_edit"
        app:layout_constraintBottom_toTopOf="@+id/details_constraint_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_15dp">
        <ImageView
            android:id="@+id/details_calendar_task"
            android:src="@drawable/calendar"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/border_textarea"
            android:padding="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/details_reminder_task"/>
        <ImageView
            android:id="@+id/details_reminder_task"
            android:src="@drawable/reminder"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/border_textarea"
            android:padding="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/details_trash_task"/>
        <ImageView
            android:id="@+id/details_trash_task"
            android:src="@drawable/trash_black"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/border_textarea"
            android:padding="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/details_edit_task"/>
        <ImageView
            android:id="@+id/details_edit_task"
            android:src="@drawable/edit"
            android:layout_width="@dimen/dimen_25dp"
            android:layout_height="@dimen/dimen_25dp"
            android:background="@drawable/border_textarea"
            android:padding="@dimen/dimen_5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_constraint_state"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/details_created_date_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generic_title_task_recycler"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Spinner
            android:id="@+id/details_state_task"
            android:background="@drawable/border_textarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light_italic"
            android:text="@string/generic_state_task_recycler"
            android:textAlignment="center"
            android:spinnerMode="dialog"
            android:dropDownWidth="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>